WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197370
User-facing strings should use curly quotes instead of straight
https://bugs.webkit.org/show_bug.cgi?id=197370
Summary
User-facing strings should use curly quotes instead of straight
Chris Dumez
Reported
2019-04-29 08:55:53 PDT
User-facing strings should use curly quotes instead of straight.
Attachments
Patch
(8.20 KB, patch)
2019-04-29 08:58 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-04-29 08:58:39 PDT
Created
attachment 368457
[details]
Patch
Geoffrey Garen
Comment 2
2019-04-29 09:58:25 PDT
Comment on
attachment 368457
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2019-04-29 11:22:30 PDT
Comment on
attachment 368457
[details]
Patch Clearing flags on attachment: 368457 Committed
r244742
: <
https://trac.webkit.org/changeset/244742
>
WebKit Commit Bot
Comment 4
2019-04-29 11:22:32 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-04-29 11:23:18 PDT
<
rdar://problem/50303311
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug