User-facing strings should use curly quotes instead of straight https://bugs.webkit.org/show_bug.cgi?id=197370

Reviewed by Geoffrey Garen.

Source/WebCore:

Update localizable strings.

* en.lproj/Localizable.strings:

Source/WebKit:

Update localizable alert text that was recently added to use curly quotes instead of
straight ones, as per our guidelines.

* UIProcess/Cocoa/WKOrientationAccessAlert.mm:
(WebKit::presentOrientationAccessAlert):
* UIProcess/Cocoa/WKStorageAccessAlert.mm:
(WebKit::presentStorageAccessAlert):


Canonical link: https://commits.webkit.org/211571@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244742 268f45cc-cd09-0410-ab3c-d52691b4dbfc